--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -27,3 +27,7 @@ services:
         arguments:
             $client: '@App\Service\Shopify\ShopifyClient'
             $cache: '@cache.app'
+
+    App\Service\Shopify\ShopifyCartService:
+        arguments:
+            $client: '@App\Service\Shopify\ShopifyClient'
